# DeclarationInspector

./: CMakeLists.txt  README.md  TODO  changelog
Analyser/: Analyser.atg  Analyser.cpp  Analyser.h  CMakeLists.txt  Coco  DataType.cpp  DataType.h  Declaration.cpp  Declaration.h  Parser.cpp  Parser.frame  Parser.h  Scanner.cpp  SymbolTable.cpp  SymbolTable.h
Tests/: CMakeLists.txt  main.cpp
Tutorial/: codeAdvancedTypes  codeArrays  codeDatasizes  codeEnums  codeHeapDecl  codeKlassen  codeMultArrays  codePadding  codeReordering  codeSTL  codeSTL2  codeStrukturen  codeUnions  codeVererbung  codeZeiger  index  tutAdvancedTypes  tutAppInfo  tutArrays  tutDatasizes  tutEnums  tutHeapDecl  tutImpressum  tutKlassen  tutMemInfo  tutMultArrays  tutNavigation  tutPadding  tutReordering  tutSTL  tutSTL2  tutStackDecl  tutStrukturen  tutUnions  tutVererbung  tutZeiger
Visualizer/: CMakeLists.txt  boundingbox.cpp  boundingbox.h  classmemory.cpp  classmemory.h  commonmemory.cpp  commonmemory.h  editor.cpp  editor.h  editsidebar.cpp  editsidebar.h  highligther.cpp  highligther.h  main.cpp  memoryarea.cpp  memoryarea.h  tutorial.cpp  tutorial.h  visualizer.cpp  visualizer.h
